# ros2-unity-sim

./: LICENSE  README.md
ares8_model/: Assembly-CSharp.csproj  JBooth.MicroSplat.Core.Editor.csproj  JBooth.MicroSplat.Core.csproj  ares8_model.sln
ares8_model/Assets/: ArUCo pole v1.fbx  New Terrain.asset  NewLayer 2.terrainlayer  NewLayer 3.terrainlayer
ares8_model/Assets/ARES8/: ARES8.unity  Car.cs  rover_control.cs  rover_model.prefab
ares8_model/Assets/Materials/: marker_0004.mat
ares8_model/Assets/Scenes/: SampleScene.unity
ares8_model/ProjectSettings/: ProjectSettings.asset
ares8_model/Temp/: workerlic
ares8_model/Temp/__Backupscenes/: 0.backup
ares8_model/UserSettings/: EditorUserSettings.asset
ares8_model/UserSettings/Layouts/: default-2022.dwlt
ros2_project/: README.md
ros2_project/nav_rover_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_project/nav_rover_control/config/: ares8_rover.yaml  demo_waypoints.yaml  display.rviz  dual_ekf_navsat_params.yaml  nav2_no_map_params.yaml
ros2_project/nav_rover_control/launch/: ares8_rover.launch.py  dual_ekf_navsat.launch.py  gps_waypoint_follower.launch.py  mapviz.launch.py  robot_state_publisher.launch.py
ros2_project/nav_rover_control/meshes/: base_link.stl  base_scan_1.stl  camera_link_1.stl  steering_link_lb_1.stl  steering_link_lf_1.stl  steering_link_rb_1.stl  steering_link_rf_1.stl  tire_LB_link_1.stl  tire_LF_link_1.stl  tire_RB_link_1.stl  tire_RF_link_1.stl
ros2_project/nav_rover_control/models/: model.config  model.sdf
ros2_project/nav_rover_control/nav_rover_control/: logged_waypoint_follower.py  rover_control_pub.py
ros2_project/nav_rover_control/urdf/: ares8_rover.urdf  ares8_rover.xacro  ares8_rover_arm.urdf  ares8_rover_imu.urdf  ares8_rover_rviz.urdf  materials.xacro
ros2_project/nav_rover_control/worlds/: mars.world  mars_husky.world  sonoma_raceway.world
ros2_project/tf_publisher/: CMakeLists.txt  package.xml  setup.py
ros2_project/tf_publisher/launch/: tf_publisher.launch.py
ros2_project/tf_publisher/tf_publisher/: tf_publisher.py
unity_project/ProjectSettings/: ProjectSettings.asset
windows-mac/ares8_model/: AdjustPivot.Editor.csproj
(+17 files in other folders)
