<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_rover_control</name>
  <version>0.0.0</version>
  <description>Demo package for following GPS waypoints with nav2</description>
  <maintainer email="pedro.gonzalez@eia.edu.co">pepisg</maintainer>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <license>MIT</license>

  <depend>navigation2</depend>
  <depend>robot_localization</depend>
  <depend>mapviz</depend>
  <depend>mapviz_plugins</depend>
  <depend>tile_map</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>


  <build_depend>control_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>four_ws_control</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
